# Retra

./: .gitignore  ARCHITECTURE_DECISIONS.md  ARCHIVE_MANIFEST.md  BUILD_REPORT.md  CHANGELOG.md  CURRENT_TASKS.md  IMPLEMENTATION_STATUS.md  KNOWN_ISSUES.md  NEXT_ACTIONS.md  PROJECT_STATE.md  README.md  TEST_RESULTS.md  THREAT_MODEL.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro  retra-sideload.jks
docs/: 0.7-verification.md  BRAND_IDENTITY.md  BUILD_FAILURE_0.5_ANALYSIS.md  CATALOG_MANIFEST_FORMAT.md  CONTENT_AND_CHEATS_POLICY.md  CRITICAL_REDESIGN_REVIEW.md  DEPENDENCY_BASELINE.md  EMULATOR_CORE_EVALUATION.md  FEEDBACK_AND_NOTIFICATIONS.md  GOOGLE_SIGN_IN_SETUP.md  MGBA_INTEGRATION_PLAN.md  ORIGINAL_SPEC.md  PATCH_FORMATS.md  REDESIGN_CHANGELOG.md  REDESIGN_VALIDATION.md  RESEARCH_NOTES_0.5.md  RETRA_CHEAT_INDEX.md  RETRA_CODES_FORMAT.md  RETRA_FINAL_UI_UX_SPEC.md  ROM_PLAYBACK_SETUP.md  SECURE_DOWNLOADS.md  SKILLS_INTEGRATION.md  SKILL_EXECUTION_REPORT.md  UI_UX_AUDIT_0.5.md  UI_UX_AUDIT_0.6.md  V2_2_BUILD_FAILURE_AND_FIX.md  V2_2_CONTENT_AND_ARTWORK_POLICY.md  V2_2_PRODUCT_REVIEW.md  V2_2_ROADMAP_STATUS.md  V2_3_BUILD_FAILURE_AND_FIX.md  V2_3_FEATURE_RECOMMENDATIONS.md  V2_3_IMPLEMENTATION.md  V2_4_RECOMMENDATIONS.md  V2_PRODUCT_REVIEW.md  V2_ROADMAP.md  build-environment-0.5.txt  build-environment.txt  skills-cli-attempt.txt  (+1 more)
emulation/native/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  libretro_mgba_engine.cpp  libretro_mgba_engine.h  reference_engine.cpp  reference_engine.h
(+150 files in other folders)
